--- a/tmux.conf
+++ b/tmux.conf
@@ -19,3 +19,7 @@ set-option -ga terminal-overrides ',*:enacs@:smacs@:rmacs@:acsc@'
 # instructs tmux to expect UTF-8 sequences
 setw -g utf8 on
 set -g status-utf8 on
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
