--- a/tmux.conf
+++ b/tmux.conf
@@ -23,3 +23,5 @@ set -g status-utf8 on
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
+
+set -g default-terminal "screen-256color"
